--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-tailwindcss",
+  "name": "evolve",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -12,7 +12,6 @@
     "@next/mdx": "^10.0.5",
     "framer-motion": "^3.2.1",
     "next": "latest",
-    "next-react-svg": "^1.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
